--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ DB_DIALECT=postgresql
 # ======================= LLM 相关 =======================
 # 您可以更改每个部分LLM使用的API，🚩只要兼容OpenAI请求格式都可以，定义好KEY、BASE_URL与MODEL_NAME即可正常使用。
 # 重要提醒：我们强烈推荐您先使用推荐的配置申请API，先跑通再进行您的更改！
-# 我们的LLM模型API赞助商有：https://share.302.ai/P66Qe3、https://aihubmix.com/?aff=8Ds9，提供了非常全面的模型api
+# 我们的LLM模型API赞助商有：https://aihubmix.com/?aff=8Ds9，提供了非常全面的模型api
 
 # Insight Agent（推荐kimi-k2，官方申请地址：https://platform.moonshot.cn/）
 INSIGHT_ENGINE_API_KEY=
